# remote-db-mcp-server

./: .gitignore  COSMOS_DB_SETUP.md  Dockerfile  README.md  config.example  debug_products.py  deploy.sh  pyproject.toml  requirements.txt
src/: __main__.py  client.py  db.json  insert_products.py  schema_info.py  server.py
